Removed luna keypass

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,7 +10,7 @@
     "com.unity.test-framework": "1.1.33",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.4",
-    "uk.lunalabs.luna": "file:C:/Users/Artiom/Downloads/playworks_6.3.0/scripts",
+    "uk.lunalabs.luna": "file:C:/Users/Artiom/Downloads/luna_playworks/scripts",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
